# advent-of-code

./: .dir-locals-2.el  .gitignore  README.md  advent-of-code.cabal  default.nix  hie.yaml  shell.nix
app/: Main.hs
nix/: sources.json
s/: format  generate
src/: Aoc.hs
src/Aoc/: Parsers.hs  Problems.hs  Sort.hs  Y2020.hs  Y2021.hs  Y2022.hs
src/Aoc/Y2020/: P1.hs
src/Aoc/Y2021/: P1.hs  P10.hs  P11.hs  P12.hs  P13.hs  P14.hs  P15.hs  P16.hs  P17.hs  P18.hs  P19.hs  P2.hs  P20.hs  P21.hs  P22.hs  P23.hs  P24.hs  P25.hs  P3.hs  P4.hs  P5.hs  P6.hs  P7.hs  P8.hs  P9.hs
src/Aoc/Y2022/: P.template  P1.hs  P10.hs  P11.hs  P12.hs  P13.hs  P14.hs  P15.hs  P16.hs  P17.hs  P18.hs  P19.hs  P2.hs  P20.hs  P21.hs  P22.hs  P23.hs  P24.hs  P25.hs  P3.hs  P4.hs  P5.hs  P6.hs  P7.hs  P8.hs  P9.hs
test/Aoc/: ParsersSpec.hs
test/Aoc/Y2020/: P1Spec.hs
test/Aoc/Y2021/: P10Spec.hs  P11Spec.hs  P12Spec.hs  P13Spec.hs  P14Spec.hs  P15Spec.hs  P16Spec.hs  P17Spec.hs  P18Spec.hs  P19Spec.hs  P1Spec.hs  P20Spec.hs  P21Spec.hs  P22Spec.hs  P23Spec.hs  P24Spec.hs  P25Spec.hs  P2Spec.hs  P3Spec.hs  P4Spec.hs  P5Spec.hs  P6Spec.hs  P7Spec.hs  P8Spec.hs  P9Spec.hs
test/Aoc/Y2022/: P10Spec.hs  P11Spec.hs  P12Spec.hs  P13Spec.hs  P14Spec.hs  P15Spec.hs  P16Spec.hs  P17Spec.hs  P18Spec.hs  P19Spec.hs  P1Spec.hs  P20Spec.hs  P21Spec.hs  P22Spec.hs  P23Spec.hs  P24Spec.hs  P25Spec.hs  P2Spec.hs  P3Spec.hs  P4Spec.hs  P5Spec.hs  P6Spec.hs  P7Spec.hs  P8Spec.hs  P9Spec.hs  PSpec.template
