cabal-version:      2.4
name:               advent-of-code
version:            0.1.0.0

synopsis:           Solutions to the 2021 Advent of Code

description:        See the README.md

license:            MIT
author:             Patrick Steele
maintainer:         steele.pat@gmail.com

copyright:          2021 Patrick Steele
extra-source-files:
    README.md

library
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    exposed-modules:  Aoc
                    , Aoc.Parsers
                    , Aoc.Problems
                    , Aoc.Sort
                    , Aoc.Y2020
                    , Aoc.Y2020.P1
                    , Aoc.Y2021
                    , Aoc.Y2021.P1
    other-modules:    
    build-depends:    base ^>=4.14.1.0
                    , containers
                    , megaparsec
                    , primitive
                    , text
                    , vector
                    , vector-algorithms

executable advent-of-code
    main-is:          Main.hs
    hs-source-dirs:   app
    ghc-options:      -threaded -with-rtsopts=-N -Wall
    default-language: Haskell2010
    build-depends:    base ^>=4.14.1.0
                    , advent-of-code
                    , clock
                    , containers
                    , optparse-applicative
                    , text

test-suite tests
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  ghc-options:        -threaded -with-rtsopts=-N -Wall
  other-modules:      Aoc.Y2020.P1Spec
                    , Aoc.Y2021.P1Spec
  build-depends:      base ^>=4.14.1.0
                    , advent-of-code
                    , hspec
                    , QuickCheck
                    , vector