cabal-version:      2.4
name:               advent-of-code
version:            0.1.0.0

synopsis:           Advent of Code solutions

description:        See the README.md

license:            MIT
author:             Patrick Steele
maintainer:         steele.pat@gmail.com

copyright:          2021, 2022 Patrick Steele
extra-source-files:
  README.md

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall
  exposed-modules:    Aoc
                    , Aoc.Parsers
                    , Aoc.Problems
                    , Aoc.Sort
                    , Aoc.Y2020
                    , Aoc.Y2020.P1
                    , Aoc.Y2021
                    , Aoc.Y2021.P1
                    , Aoc.Y2021.P2
                    , Aoc.Y2021.P3
                    , Aoc.Y2021.P4
                    , Aoc.Y2021.P5
                    , Aoc.Y2021.P6
                    , Aoc.Y2021.P7
                    , Aoc.Y2021.P8
                    , Aoc.Y2021.P9
                    , Aoc.Y2021.P10
                    , Aoc.Y2021.P11
                    , Aoc.Y2021.P12
                    , Aoc.Y2021.P13
                    , Aoc.Y2021.P14
                    , Aoc.Y2021.P15
                    , Aoc.Y2021.P16
                    , Aoc.Y2021.P17
                    , Aoc.Y2021.P18
                    , Aoc.Y2021.P19
                    , Aoc.Y2021.P20
                    , Aoc.Y2021.P21
                    , Aoc.Y2021.P22
                    , Aoc.Y2021.P23
                    , Aoc.Y2021.P24
                    , Aoc.Y2021.P25
                    , Aoc.Y2022
                    , Aoc.Y2022.P1
                    , Aoc.Y2022.P2
                    , Aoc.Y2022.P3
                    , Aoc.Y2022.P4
                    , Aoc.Y2022.P5
                    , Aoc.Y2022.P6
                    , Aoc.Y2022.P7
                    , Aoc.Y2022.P8
                    , Aoc.Y2022.P9
                    , Aoc.Y2022.P10
                    , Aoc.Y2022.P11
                    , Aoc.Y2022.P12
                    , Aoc.Y2022.P13
                    , Aoc.Y2022.P14
                    , Aoc.Y2022.P15
                    , Aoc.Y2022.P16
                    , Aoc.Y2022.P17
                    , Aoc.Y2022.P18
                    , Aoc.Y2022.P19
                    , Aoc.Y2022.P20
                    , Aoc.Y2022.P21
                    , Aoc.Y2022.P22
                    , Aoc.Y2022.P23
                    , Aoc.Y2022.P24
                    , Aoc.Y2022.P25
  other-modules:
  default-extensions: OverloadedStrings
  build-depends:      base ^>=4.15.1.0
                    , containers
                    , extra
                    , megaparsec
                    , mtl
                    , primitive
                    , recursion-schemes
                    , text
                    , vector
                    , vector-algorithms

executable aoc
  main-is:            Main.hs
  hs-source-dirs:     app
  ghc-options:        -threaded -with-rtsopts=-N -Wall
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  build-depends:      base ^>=4.15.1.0
                    , advent-of-code
                    , clock
                    , containers
                    , optparse-applicative
                    , text

test-suite tests
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  ghc-options:        -threaded -with-rtsopts=-N -Wall
  other-modules:      Aoc.ParsersSpec
                    , Aoc.Y2020.P1Spec
                    , Aoc.Y2021.P1Spec
                    , Aoc.Y2021.P2Spec
                    , Aoc.Y2021.P3Spec
                    , Aoc.Y2021.P4Spec
                    , Aoc.Y2021.P5Spec
                    , Aoc.Y2021.P6Spec
                    , Aoc.Y2021.P7Spec
                    , Aoc.Y2021.P8Spec
                    , Aoc.Y2021.P9Spec
                    , Aoc.Y2021.P10Spec
                    , Aoc.Y2021.P11Spec
                    , Aoc.Y2021.P12Spec
                    , Aoc.Y2021.P13Spec
                    , Aoc.Y2021.P14Spec
                    , Aoc.Y2021.P15Spec
                    , Aoc.Y2021.P16Spec
                    , Aoc.Y2021.P17Spec
                    , Aoc.Y2021.P18Spec
                    , Aoc.Y2021.P19Spec
                    , Aoc.Y2021.P20Spec
                    , Aoc.Y2021.P21Spec
                    , Aoc.Y2021.P22Spec
                    , Aoc.Y2021.P23Spec
                    , Aoc.Y2021.P24Spec
                    , Aoc.Y2021.P25Spec
                    , Aoc.Y2022.P1Spec
                    , Aoc.Y2022.P2Spec
                    , Aoc.Y2022.P3Spec
                    , Aoc.Y2022.P4Spec
                    , Aoc.Y2022.P5Spec
                    , Aoc.Y2022.P6Spec
                    , Aoc.Y2022.P7Spec
                    , Aoc.Y2022.P8Spec
                    , Aoc.Y2022.P9Spec
                    , Aoc.Y2022.P10Spec
                    , Aoc.Y2022.P11Spec
                    , Aoc.Y2022.P12Spec
                    , Aoc.Y2022.P13Spec
                    , Aoc.Y2022.P14Spec
                    , Aoc.Y2022.P15Spec
                    , Aoc.Y2022.P16Spec
                    , Aoc.Y2022.P17Spec
                    , Aoc.Y2022.P18Spec
                    , Aoc.Y2022.P19Spec
                    , Aoc.Y2022.P20Spec
                    , Aoc.Y2022.P21Spec
                    , Aoc.Y2022.P22Spec
                    , Aoc.Y2022.P23Spec
                    , Aoc.Y2022.P24Spec
                    , Aoc.Y2022.P25Spec
  default-extensions:
                      OverloadedStrings
  build-depends:      base ^>=4.15.1.0
                    , advent-of-code
                    , QuickCheck
                    , containers
                    , hspec
                    , megaparsec
                    , text
                    , vector
